DEVKUB-25 - Администрирование и конфигурация Kubernetes/09 - Сетевое взаимодействие в Kubernetes. Часть 2/deployment-09-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: multitool-dep
  name: backend
  namespace: hw09
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool
  ports:
  - name: multitool80
    port: 80
    targetPort: 80
